--- a/.gitmodules
+++ b/.gitmodules
@@ -1,18 +1,19 @@
 [submodule "u-boot-sunxi"]
 	path = u-boot-sunxi
-	url = /linux-sunxi/u-boot-sunxi.git
+	url = https://github.com/parkam/u-boot-sunxi.git
+	branch = fix_boot_args
 [submodule "sunxi-tools"]
 	path = sunxi-tools
-	url = /linux-sunxi/sunxi-tools.git
+	url = https://github.com/linux-sunxi/sunxi-tools.git
 [submodule "sunxi-boards"]
 	path = sunxi-boards
-	url = /linux-sunxi/sunxi-boards.git
+	url = https://github.com/linux-sunxi/sunxi-boards.git
 [submodule "linux-sunxi"]
 	path = linux-sunxi
-	url = /linux-sunxi/linux-sunxi.git
+	url = https://github.com/linux-sunxi/linux-sunxi.git
 [submodule "allwinner-tools"]
 	path = allwinner-tools
-	url = /linux-sunxi/allwinner-tools.git
+	url = https://github.com/linux-sunxi/allwinner-tools.git
 [submodule "cedarx-libs"]
 	path = cedarx-libs
-	url = /linux-sunxi/cedarx-libs.git
+	url = https://github.com/linux-sunxi/cedarx-libs.git
